# Rot8

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  tmp
.github/workflows/: static_checks.yml
ext/: CMakeLists.txt
include/rot8/: camera.h  drawable.h  renderable.h  triangle.h  window.h
include/rot8/helpers/: shader.h  texture.h  vao.h
include/rot8/models/: tex_triangle.h  triangle.h
src/: camera.cpp  drawable.cpp  main.cpp  renderable.cpp  window.cpp
src/helpers/: shader.cpp  texture.cpp  vao.cpp
src/models/tex_triangle/: tex_triangle.cpp  tex_triangle.frag  tex_triangle.vert
src/models/triangle/: triangle.cpp  triangle.frag  triangle.vert
src/triangle/: triangle.frag
